# bas-apres

./: .gitignore  CHANGELOG.md  README.md  apres_to_nc.py  nc_to_apres.py  plot_apres.py  pyproject.toml  read_apres.py  requirements.txt  setup.py  write_apres.py
.github/workflows/: docs.yml
apres/: __init__.py  __main__.py  apres.py  apres_to_nc.py  nc_to_apres.py  plot_apres.py  read_apres.py  write_apres.py
apres/tests/: TestApRESFile.py
notebooks/: remote_load.ipynb
tests/: conftest.py  convert_and_diff_apres_nc.sh  test_apres.py
