[tool.poetry]
name = "bas-apres"
version = "0.2.0"
description = "Package for working with BAS ApRES files"
authors = ["Paul Breen <pbree@bas.ac.uk>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/antarctica/bas-apres"
homepage = "https://github.com/antarctica/bas-apres"
documentation = "https://raw.githubusercontent.com/antarctica/bas-apres/master/README.md"

# This is required because the apres name is taken on PyPI, hence "name"
# above is different to the directory/module name
packages = [
    {include = "apres"}
]

[tool.poetry.scripts]
apres_to_nc = "apres.apres_to_nc:main"
nc_to_apres = "apres.nc_to_apres:main"
plot_apres = "apres.plot_apres:main"
read_apres = "apres.read_apres:main"
write_apres = "apres.write_apres:main"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17.2"
matplotlib = "^3.4.3"
netCDF4 = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[tool.poetry.extras]
remote = ["fsspec"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
